[package]
name = "test-ts-conversions"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
halo2_proofs = { workspace = true }
shielder-circuits = { workspace = true }
shielder-rust-sdk = { workspace = true, features = ["account"] }
shielder-setup = { workspace = true }
type-conversions = { workspace = true }
