[package]
name = "shielder-prover-server"
version = "0.1.0"
edition = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
repository = { workspace = true }

[dependencies]
axum = { workspace = true, features = ["tokio", "macros"] }
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }
shielder-prover-common = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread"] }
tokio-task-pool = { workspace = true, features = ["log"] }
tower-http = { workspace = true, features = ["cors"] }
vsock = { workspace = true }
base64 = { workspace = true }
