[package]
name = "shielder-prover-tee"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/zkOS-monorepo"

[dependencies]
log = { workspace = true }
shielder-prover-common = { workspace = true }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
] }
tokio-vsock = { workspace = true }
shielder-circuits = { workspace = true }
rand = { workspace = true }
type-conversions = { workspace = true }
ecies-encryption-lib  = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true}
serde_json = { workspace = true}

[build-dependencies]
powers-of-tau = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
shielder-circuits = { workspace = true }
