[package]
name = "shielder-rewards-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
futures.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio-util = { workspace = true, features = ["codec"] }
tokio-vsock.workspace = true
tokio.workspace = true
