[package]
name = "shielder-rewards-server"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
axum = { workspace = true, features = ["tokio"] }
shielder-rewards-common.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "rt", "rt-multi-thread"] }
