[package]
name = "shielder-rewards-tee"
version = "0.1.0"
edition = "2021"
authors = ["Cardinal"]
homepage = "https://alephzero.org"
license = "Apache-2.0"
categories = ["cryptography"]
repository = "https://github.com/Cardinal-Cryptography/zkOS-monorepo"

[dependencies]
alloy-primitives = { workspace = true }
base64 = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
shielder-circuits = { workspace = true }
shielder-rewards-common = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-vsock = { workspace = true }
